--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
       <div class="bg-gray-900 p-4 rounded hover:scale-105 transition">
         <img src="album1.jpg" alt="Album 1" class="rounded mb-4">
         <h3 class="font-bold mb-2">Album Name</h3>
-        <div class="flex justify-center gap-3">
-          <a href="#" class="p-2 border rounded hover:bg-white hover:text-black transition">Spotify</a>
-          <a href="#" class="p-2 border rounded hover:bg-white hover:text-black transition">Apple Music</a>
-          <a href="#" class="p-2 border rounded hover:bg-white hover:text-black transition">YouTube</a>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
+          <a href="https://open.spotify.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+            Spotify
+          </a>
+          <a href="https://music.apple.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+            Apple Music
+          </a>
+          <a href="https://youtube.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+            YouTube
+          </a>
         </div>
       </div>
       <!-- Repeat album cards as needed -->
@@ -104,10 +110,19 @@
   <!-- FOOTER -->
   <footer class="py-6 text-center border-t border-gray-700">
     <p>© 2026 CDVerse</p>
-    <div class="flex justify-center gap-4 mt-2">
-      <a href="#"><img src="instagram.svg" alt="Instagram" class="w-6"></a>
-      <a href="#"><img src="youtube.svg" alt="YouTube" class="w-6"></a>
-      <a href="#"><img src="spotify.svg" alt="Spotify" class="w-6"></a>
+    <div class="flex gap-4 justify-center mt-6">
+      <a href="https://instagram.com" target="_blank">
+        <img src="instagram.svg" alt="Instagram" class="w-6 h-6"/>
+      </a>
+      <a href="https://youtube.com" target="_blank">
+        <img src="youtube.svg" alt="YouTube" class="w-6 h-6"/>
+      </a>
+      <a href="https://open.spotify.com" target="_blank">
+        <img src="spotify.svg" alt="Spotify" class="w-6 h-6"/>
+      </a>
+      <a href="https://tiktok.com" target="_blank">
+        <img src="tiktok.svg" alt="TikTok" class="w-6 h-6"/>
+      </a>
     </div>
   </footer>
 
