changed social media link

--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
       <div class="bg-gray-900 p-4 rounded hover:scale-105 transition">
         <img src="album1.jpg" alt="Album 1" class="rounded mb-4">
         <h3 class="font-bold mb-2">Album Name</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-          <a href="https://open.spotify.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+        <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
+          <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
             Spotify
           </a>
-          <a href="https://music.apple.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+          <a href="https://music.apple.com/gb/artist/cd/1529797820" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
             Apple Music
           </a>
-          <a href="https://youtube.com" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
+          <a href="https://www.youtube.com/@CDVerseWorld" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
             YouTube
+          </a>
+          <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank" rel="noopener noreferrer" class="p-4 border rounded hover:bg-white hover:text-black transition">
+            SoundCloud
           </a>
         </div>
       </div>
@@ -111,17 +114,24 @@
   <footer class="py-6 text-center border-t border-gray-700">
     <p>© 2026 CDVerse</p>
     <div class="flex gap-4 justify-center mt-6">
-      <a href="https://instagram.com" target="_blank">
+      <a href="https://www.instagram.com/cdverseworld" target="_blank" rel="noopener noreferrer">
         <img src="instagram.svg" alt="Instagram" class="w-6 h-6"/>
       </a>
-      <a href="https://youtube.com" target="_blank">
+      <a href="https://www.youtube.com/@CDVerseWorld" target="_blank" rel="noopener noreferrer">
         <img src="youtube.svg" alt="YouTube" class="w-6 h-6"/>
       </a>
-      <a href="https://open.spotify.com" target="_blank">
+      <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank" rel="noopener noreferrer">
         <img src="spotify.svg" alt="Spotify" class="w-6 h-6"/>
       </a>
-      <a href="https://tiktok.com" target="_blank">
+      <a href="https://www.tiktok.com/@cdverse" target="_blank" rel="noopener noreferrer">
         <img src="tiktok.svg" alt="TikTok" class="w-6 h-6"/>
+      </a>
+      <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank" rel="noopener noreferrer">
+        <img src="soundcloud.svg" alt="SoundCloud" class="w-6 h-6"/>
+      </a>
+      <a href="https://www.instagram.com/camerondankwa" target="_blank" rel="noopener noreferrer" class="ml-4 px-4 py-2 rounded-full bg-gradient-to-r from-pink-500 via-red-500 to-yellow-400 text-black font-semibold shadow-lg hover:scale-105 transition inline-flex items-center gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor"><path d="M12 7a5 5 0 100 10 5 5 0 000-10z" opacity=".9"/><path d="M17.5 6.5a1.5 1.5 0 11-3.001.001A1.5 1.5 0 0117.5 6.5z"/></svg>
+        Cameron (Personal)
       </a>
     </div>
   </footer>
