--- a/index.html
+++ b/index.html
@@ -23,44 +23,75 @@
 <body class="bg-black text-white font-sans antialiased scroll-smooth">
 
   <!-- HERO SECTION -->
-  <header class="min-h-screen flex flex-col justify-center items-center text-center px-6 bg-gradient-to-b from-black via-gray-900 to-black relative overflow-hidden">
-    <h1 class="text-6xl sm:text-7xl font-extrabold mb-4 animate-fadeIn">CDVerse</h1>
-    <p class="text-xl sm:text-2xl mb-6 animate-fadeIn delay-200">Artist · Creator · Movement — Create Your World</p>
-    <div class="flex gap-4 animate-fadeIn delay-400">
-      <a href="#music" class="px-6 py-3 bg-white text-black rounded hover:scale-105 transition">Listen</a>
-      <a href="#cyw" class="px-6 py-3 border border-white rounded hover:bg-white hover:text-black hover:scale-105 transition">Explore CYW</a>
-      <a href="#media" class="px-6 py-3 border border-white rounded hover:bg-white hover:text-black hover:scale-105 transition">Watch</a>
+  <header class="min-h-screen flex flex-col items-center justify-center p-6 bg-black text-white">
+    <!-- Main Artist Name -->
+    <h1 class="text-5xl sm:text-6xl font-extrabold tracking-tight mb-4">CDVerse</h1>
+
+    <!-- Main Slogan -->
+    <p class="text-2xl sm:text-3xl font-semibold mb-2 text-yellow-400">Create Your World</p>
+
+    <!-- Supporting Tagline -->
+    <p class="text-lg sm:text-xl text-gray-400 text-center max-w-xl">
+      Music. Sports. Lifestyle. — Join the movement.
+    </p>
+
+    <!-- Call-to-Action Buttons -->
+    <div class="flex gap-4 mt-8">
+      <a href="#music" class="px-6 py-3 bg-white text-black rounded font-bold hover:bg-gray-200 transition">Listen</a>
+      <a href="#cyw" class="px-6 py-3 border border-white rounded font-bold hover:bg-white hover:text-black transition">Explore CYW</a>
+      <a href="#media" class="px-6 py-3 border border-white rounded font-bold hover:bg-white hover:text-black transition">Watch</a>
     </div>
-    <!-- Optional animated background -->
-    <div class="absolute inset-0 bg-gradient-to-r from-purple-800 via-pink-600 to-blue-500 opacity-10 animate-pulse"></div>
   </header>
 
-  <!-- MUSIC SECTION -->
-  <section id="music" class="py-16 px-6 bg-[#070707] text-center">
-    <h2 class="text-3xl font-bold mb-8">Latest Release</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 max-w-5xl mx-auto">
-      <!-- Album card example -->
-      <div class="bg-gray-900 p-4 rounded hover:scale-105 transition">
-        <img src="album1.jpg" alt="Album 1" class="rounded mb-4">
-        <h3 class="font-bold mb-2">Album Name</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
-          <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
-            Spotify
-          </a>
-          <a href="https://music.apple.com/gb/artist/cd/1529797820" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
-            Apple Music
-          </a>
-          <a href="https://www.youtube.com/@CDVerseWorld" target="_blank" class="p-4 border rounded hover:bg-white hover:text-black transition">
-            YouTube
-          </a>
-          <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank" rel="noopener noreferrer" class="p-4 border rounded hover:bg-white hover:text-black transition">
-            SoundCloud
-          </a>
-        </div>
+  <!-- Latest Release Section (Dynamic) -->
+  <section id="music" class="py-16 px-6 bg-[#070707] text-white">
+    <div class="max-w-3xl mx-auto text-center">
+      <!-- Section Title -->
+      <h2 class="text-3xl sm:text-4xl font-bold mb-6">Latest Release</h2>
+
+      <!-- Album Cover -->
+      <img id="album-cover" src="" alt="Latest Release Cover Art" class="mx-auto rounded-lg mb-4 shadow-lg"/>
+
+      <!-- Song Name -->
+      <p id="song-name" class="text-xl font-semibold mb-4"></p>
+
+      <!-- Streaming Links -->
+      <div class="flex flex-wrap justify-center gap-4 mb-6">
+        <a id="spotify-link" href="#" target="_blank" class="px-4 py-2 bg-green-500 rounded hover:bg-green-600 transition">Spotify</a>
+        <a id="apple-link" href="#" target="_blank" class="px-4 py-2 bg-gray-800 rounded hover:bg-gray-700 transition">Apple Music</a>
+        <a id="youtube-link" href="#" target="_blank" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700 transition">YouTube</a>
+        <a id="soundcloud-link" href="#" target="_blank" class="px-4 py-2 bg-orange-500 rounded hover:bg-orange-600 transition">SoundCloud</a>
       </div>
-      <!-- Repeat album cards as needed -->
+
+      <!-- Description -->
+      <p id="song-desc" class="text-gray-400 max-w-xl mx-auto"></p>
     </div>
   </section>
+
+  <script>
+    // Latest Release Data (update this for future releases)
+    const latestRelease = {
+      cover: "assets/c4y.PNG",          // Album image
+      name: "Christmas4You",            // Song name
+      description: 'Listen to "Christmas4You" by CDVerse — music, energy, and the movement you can feel.',
+      links: {
+        spotify: "https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA",
+        apple: "https://music.apple.com/gb/artist/cd/1529797820",
+        youtube: "https://www.youtube.com/@CDVerseWorld",
+        soundcloud: "https://on.soundcloud.com/PXKP5WFCpqH5kJcWok"
+      }
+    };
+
+    // Inject data into HTML dynamically
+    document.getElementById("album-cover").src = latestRelease.cover;
+    document.getElementById("album-cover").alt = latestRelease.name + " Cover Art";
+    document.getElementById("song-name").textContent = latestRelease.name;
+    document.getElementById("song-desc").textContent = latestRelease.description;
+    document.getElementById("spotify-link").href = latestRelease.links.spotify;
+    document.getElementById("apple-link").href = latestRelease.links.apple;
+    document.getElementById("youtube-link").href = latestRelease.links.youtube;
+    document.getElementById("soundcloud-link").href = latestRelease.links.soundcloud;
+  </script>
 
   <!-- CYW / MOVEMENT SECTION -->
   <section id="cyw" class="py-16 px-6">
