--- a/index.html
+++ b/index.html
@@ -18,24 +18,38 @@
     @keyframes fadeIn {
       to { opacity: 1; }
     }
+
+    @keyframes heroGradient {
+      0%, 100% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+    }
+
+    .animate-heroGradient {
+      background: linear-gradient(270deg, black, white, #1E90FF);
+      background-size: 600% 600%;
+      animation: heroGradient 10s ease infinite;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body class="bg-black text-white font-sans antialiased scroll-smooth">
 
   <!-- HERO SECTION -->
-  <header class="min-h-screen flex flex-col items-center justify-center p-6 bg-black text-white">
-    <!-- Main Artist Name -->
+  <header class="relative min-h-screen flex flex-col items-center justify-center p-6 text-white overflow-hidden">
+    <!-- Animated Gradient Background -->
+    <div class="absolute inset-0 animate-heroGradient mix-blend-overlay opacity-50"></div>
+
+    <!-- Main Content -->
     <h1 class="text-5xl sm:text-6xl font-extrabold tracking-tight mb-4">CDVerse</h1>
-
-    <!-- Main Slogan -->
     <p class="text-2xl sm:text-3xl font-semibold mb-2 text-yellow-400">Create Your World</p>
-
-    <!-- Supporting Tagline -->
     <p class="text-lg sm:text-xl text-gray-400 text-center max-w-xl">
       Music. Sports. Lifestyle. — Join the movement.
     </p>
 
-    <!-- Call-to-Action Buttons -->
     <div class="flex gap-4 mt-8">
       <a href="#music" class="px-6 py-3 bg-white text-black rounded font-bold hover:bg-gray-200 transition">Listen</a>
       <a href="#cyw" class="px-6 py-3 border border-white rounded font-bold hover:bg-white hover:text-black transition">Explore CYW</a>
