--- a/index.html
+++ b/index.html
@@ -34,6 +34,47 @@
       width: 100%;
       height: 100%;
     }
+
+    /* Smooth Luxury Background (page-wide) */
+    body {
+      min-height: 100vh;
+      margin: 0;
+      background: linear-gradient(270deg, #000000, #ffffff, #4169e1); /* black, white, royal blue */
+      background-size: 600% 600%;
+      animation: gradientFade 20s ease infinite;
+      color: white;
+    }
+
+    @keyframes gradientFade {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Glowing pulse effect for album cover */
+    @keyframes pulseGlow {
+      0% {
+        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
+      }
+      50% {
+        box-shadow: 0 0 40px rgba(65,105,225,0.5), 0 0 60px rgba(255,255,255,0.3);
+      }
+      100% {
+        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
+      }
+    }
+
+    #album-cover {
+      display: block;
+      margin: 0 auto;
+      border-radius: 12px;
+      animation: pulseGlow 4s ease-in-out infinite;
+      transition: transform 0.7s ease-in-out;
+    }
+
+    #album-cover:hover {
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body class="bg-black text-white font-sans antialiased scroll-smooth">
