--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
       height: 100%;
     }
 
-    /* Smooth Luxury Background (page-wide) */
+    /* Luxury background */
     body {
       min-height: 100vh;
       margin: 0;
-      background: linear-gradient(270deg, #000000, #ffffff, #4169e1); /* black, white, royal blue */
+      font-family: sans-serif;
+      background: linear-gradient(270deg, #000000, #222222, #4169e1); /* darker white */
       background-size: 600% 600%;
       animation: gradientFade 20s ease infinite;
       color: white;
@@ -51,29 +52,51 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Glowing pulse effect for album cover */
-    @keyframes pulseGlow {
-      0% {
-        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
-      }
-      50% {
-        box-shadow: 0 0 40px rgba(65,105,225,0.5), 0 0 60px rgba(255,255,255,0.3);
-      }
-      100% {
-        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
-      }
-    }
-
+    /* Album cover with glow and hover */
     #album-cover {
       display: block;
-      margin: 0 auto;
+      margin: 2rem auto; /* spacing so it doesn't overlap */
       border-radius: 12px;
+      box-shadow: 0 0 40px rgba(65,105,225,0.7);
       animation: pulseGlow 4s ease-in-out infinite;
+      max-width: 300px; /* limit size */
+      z-index: 0;
+      position: relative;
       transition: transform 0.7s ease-in-out;
     }
 
     #album-cover:hover {
       transform: scale(1.05);
+      z-index: 1; /* ensures it doesn’t overlay text */
+    }
+
+    @keyframes pulseGlow {
+      0%, 100% {
+        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
+      }
+      50% {
+        box-shadow: 0 0 40px rgba(65,105,225,0.5), 0 0 60px rgba(255,255,255,0.2);
+      }
+    }
+
+    /* Social icons style */
+    .social-icon {
+      width: 40px;
+      height: 40px;
+      filter: brightness(1) contrast(1);
+      transition: transform 0.3s ease, filter 0.3s ease;
+    }
+
+    .social-icon:hover {
+      transform: scale(1.2);
+      filter: brightness(1.2) contrast(1.1);
+    }
+
+    /* Footer spacing */
+    footer .flex {
+      justify-content: center;
+      gap: 1.5rem;
+      margin-top: 1rem;
     }
   </style>
 </head>
@@ -98,55 +121,21 @@
     </div>
   </header>
 
-  <!-- Latest Release Section (Dynamic) -->
-  <section id="music" class="py-16 px-6 bg-[#070707] text-white">
-    <div class="max-w-3xl mx-auto text-center">
-      <!-- Section Title -->
-      <h2 class="text-3xl sm:text-4xl font-bold mb-6">Latest Release</h2>
-
-      <!-- Album Cover -->
-      <img id="album-cover" src="" alt="Latest Release Cover Art" class="mx-auto rounded-lg mb-4 shadow-lg"/>
-
-      <!-- Song Name -->
-      <p id="song-name" class="text-xl font-semibold mb-4"></p>
-
-      <!-- Streaming Links -->
-      <div class="flex flex-wrap justify-center gap-4 mb-6">
-        <a id="spotify-link" href="#" target="_blank" class="px-4 py-2 bg-green-500 rounded hover:bg-green-600 transition">Spotify</a>
-        <a id="apple-link" href="#" target="_blank" class="px-4 py-2 bg-gray-800 rounded hover:bg-gray-700 transition">Apple Music</a>
-        <a id="youtube-link" href="#" target="_blank" class="px-4 py-2 bg-red-600 rounded hover:bg-red-700 transition">YouTube</a>
-        <a id="soundcloud-link" href="#" target="_blank" class="px-4 py-2 bg-orange-500 rounded hover:bg-orange-600 transition">SoundCloud</a>
-      </div>
-
-      <!-- Description -->
-      <p id="song-desc" class="text-gray-400 max-w-xl mx-auto"></p>
-    </div>
-  </section>
-
-  <script>
-    // Latest Release Data (update this for future releases)
-    const latestRelease = {
-      cover: "assets/c4y.PNG",          // Album image
-      name: "Christmas4You",            // Song name
-      description: 'Listen to "Christmas4You" by CDVerse — music, energy, and the movement you can feel.',
-      links: {
-        spotify: "https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA",
-        apple: "https://music.apple.com/gb/artist/cd/1529797820",
-        youtube: "https://www.youtube.com/@CDVerseWorld",
-        soundcloud: "https://on.soundcloud.com/PXKP5WFCpqH5kJcWok"
-      }
-    };
-
-    // Inject data into HTML dynamically
-    document.getElementById("album-cover").src = latestRelease.cover;
-    document.getElementById("album-cover").alt = latestRelease.name + " Cover Art";
-    document.getElementById("song-name").textContent = latestRelease.name;
-    document.getElementById("song-desc").textContent = latestRelease.description;
-    document.getElementById("spotify-link").href = latestRelease.links.spotify;
-    document.getElementById("apple-link").href = latestRelease.links.apple;
-    document.getElementById("youtube-link").href = latestRelease.links.youtube;
-    document.getElementById("soundcloud-link").href = latestRelease.links.soundcloud;
-  </script>
+<!-- Latest Release -->
+<section id="music" class="py-16 px-6 text-center">
+  <h2 class="text-3xl sm:text-4xl font-bold mb-6">Latest Release</h2>
+  <img id="album-cover" src="assets/c4y.PNG" alt="Christmas4You Cover Art"/>
+  <p class="text-xl font-semibold mt-4 mb-4">Christmas4You</p>
+  <div class="flex flex-wrap justify-center gap-4 mb-6">
+    <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank">Spotify</a>
+    <a href="https://music.apple.com/gb/artist/cd/1529797820" target="_blank">Apple Music</a>
+    <a href="https://www.youtube.com/@CDVerseWorld" target="_blank">YouTube</a>
+    <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank">SoundCloud</a>
+  </div>
+  <p class="text-gray-300 max-w-xl mx-auto">
+    Listen to "Christmas4You" by CDVerse — music, energy, and the movement you can feel.
+  </p>
+</section>
 
   <!-- CYW / MOVEMENT SECTION -->
   <section id="cyw" class="py-16 px-6">
@@ -196,31 +185,18 @@
     </form>
   </section>
 
-  <!-- FOOTER -->
-  <footer class="py-6 text-center border-t border-gray-700">
-    <p>© 2026 CDVerse</p>
-    <div class="flex gap-4 justify-center mt-6">
-      <a href="https://www.instagram.com/cdverseworld" target="_blank" rel="noopener noreferrer">
-        <img src="instagram.svg" alt="Instagram" class="w-6 h-6"/>
-      </a>
-      <a href="https://www.youtube.com/@CDVerseWorld" target="_blank" rel="noopener noreferrer">
-        <img src="youtube.svg" alt="YouTube" class="w-6 h-6"/>
-      </a>
-      <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank" rel="noopener noreferrer">
-        <img src="spotify.svg" alt="Spotify" class="w-6 h-6"/>
-      </a>
-      <a href="https://www.tiktok.com/@cdverse" target="_blank" rel="noopener noreferrer">
-        <img src="tiktok.svg" alt="TikTok" class="w-6 h-6"/>
-      </a>
-      <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank" rel="noopener noreferrer">
-        <img src="soundcloud.svg" alt="SoundCloud" class="w-6 h-6"/>
-      </a>
-      <a href="https://www.instagram.com/camerondankwa" target="_blank" rel="noopener noreferrer" class="ml-4 px-4 py-2 rounded-full bg-gradient-to-r from-pink-500 via-red-500 to-yellow-400 text-black font-semibold shadow-lg hover:scale-105 transition inline-flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor"><path d="M12 7a5 5 0 100 10 5 5 0 000-10z" opacity=".9"/><path d="M17.5 6.5a1.5 1.5 0 11-3.001.001A1.5 1.5 0 0117.5 6.5z"/></svg>
-        Cameron (Personal)
-      </a>
-    </div>
-  </footer>
+<!-- Footer Socials -->
+<footer class="text-center text-gray-400 py-6">
+  <div class="flex">
+    <a href="https://www.instagram.com/cdverseworld"><img src="assets/instagram.svg" alt="Instagram" class="social-icon"/></a>
+    <a href="https://www.youtube.com/@CDVerseWorld"><img src="assets/youtube.svg" alt="YouTube" class="social-icon"/></a>
+    <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA"><img src="assets/spotify.svg" alt="Spotify" class="social-icon"/></a>
+    <a href="https://www.tiktok.com/@cdverse"><img src="assets/tiktok.svg" alt="TikTok" class="social-icon"/></a>
+    <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok"><img src="assets/soundcloud.svg" alt="SoundCloud" class="social-icon"/></a>
+    <a href="https://www.instagram.com/camerondankwa"><img src="assets/instagram.svg" alt="Personal Instagram" class="social-icon"/></a>
+  </div>
+  <p class="mt-4">© 2026 CDVerse</p>
+</footer>
 
 </body>
 </html>
