--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
     </p>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto">
       <div class="relative group overflow-hidden rounded">
-        <img src="cyw1.jpg" alt="Basketball" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
+        <img src="assets/CDVerse_Sports.png" alt="Basketball" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
         <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
-          <p class="text-white font-bold text-lg">Basketball</p>
+          <p class="text-white font-bold text-lg">CDVerse Sports</p>
         </div>
       </div>
       <div class="relative group overflow-hidden rounded">
@@ -157,7 +157,7 @@
         </div>
       </div>
       <div class="relative group overflow-hidden rounded">
-        <img src="cyw3.jpg" alt="Lifestyle" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
+        <img src="assets/CYW.png" alt="Lifestyle" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
         <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
           <p class="text-white font-bold text-lg">Lifestyle</p>
         </div>
