--- a/index.html
+++ b/index.html
@@ -6,197 +6,159 @@
   <title>CDVerse · Artist</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Tailwind Animations -->
-  <style>
-    .animate-fadeIn {
-      animation: fadeIn 1s ease forwards;
-      opacity: 0;
-    }
-    .animate-fadeIn.delay-200 { animation-delay: 0.2s; }
-    .animate-fadeIn.delay-400 { animation-delay: 0.4s; }
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CDVerse · Artist</title>
 
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    @keyframes heroGradient {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-    }
-
-    .animate-heroGradient {
-      background: linear-gradient(270deg, black, white, #1E90FF);
-      background-size: 600% 600%;
-      animation: heroGradient 10s ease infinite;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    /* Luxury background */
-    body {
-      min-height: 100vh;
-      margin: 0;
-      font-family: sans-serif;
-      background: linear-gradient(270deg, #000000, #222222, #4169e1); /* darker white */
-      background-size: 600% 600%;
-      animation: gradientFade 20s ease infinite;
-      color: white;
-    }
-
-    @keyframes gradientFade {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* Album cover with glow and hover */
-    #album-cover {
-      display: block;
-      margin: 2rem auto; /* spacing so it doesn't overlap */
-      border-radius: 12px;
-      box-shadow: 0 0 40px rgba(65,105,225,0.7);
-      animation: pulseGlow 4s ease-in-out infinite;
-      max-width: 300px; /* limit size */
-      z-index: 0;
-      position: relative;
-      transition: transform 0.7s ease-in-out;
-    }
-
-    #album-cover:hover {
-      transform: scale(1.05);
-      z-index: 1; /* ensures it doesn’t overlay text */
-    }
-
-    @keyframes pulseGlow {
-      0%, 100% {
-        box-shadow: 0 0 20px rgba(0,0,0,0), 0 0 30px rgba(0,0,0,0);
+    <style>
+      /* Background gradient animation */
+      body {
+        background: linear-gradient(270deg, #000000, #111111, #4169e1);
+        background-size: 600% 600%;
+        animation: gradientFade 30s ease infinite;
+        color: white;
+        font-family: 'Inter', sans-serif;
       }
-      50% {
-        box-shadow: 0 0 40px rgba(65,105,225,0.5), 0 0 60px rgba(255,255,255,0.2);
+
+      @keyframes gradientFade {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
       }
-    }
 
-    /* Social icons style */
-    .social-icon {
-      width: 40px;
-      height: 40px;
-      filter: brightness(1) contrast(1);
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
+      /* Hero glowing text */
+      @keyframes textGlow {
+        0%, 100% { text-shadow: 0 0 0 rgba(65,105,225,0.5), 0 0 0 rgba(255,255,255,0.2); }
+        50% { text-shadow: 0 0 20px rgba(65,105,225,0.7), 0 0 40px rgba(255,255,255,0.4); }
+      }
 
-    .social-icon:hover {
-      transform: scale(1.2);
-      filter: brightness(1.2) contrast(1.1);
-    }
+      #hero-title {
+        font-size: 4rem;
+        font-weight: 900;
+        text-align: center;
+        animation: textGlow 6s ease-in-out infinite;
+        margin-bottom: 1rem;
+      }
 
-    /* Footer spacing */
-    footer .flex {
-      justify-content: center;
-      gap: 1.5rem;
-      margin-top: 1rem;
-    }
-  </style>
-</head>
-<body class="bg-black text-white font-sans antialiased scroll-smooth">
+      #hero-subtext {
+        font-size: 1.5rem;
+        text-align: center;
+        color: #ccc;
+        animation: textGlow 6s ease-in-out infinite;
+        margin-bottom: 2rem;
+      }
 
-  <!-- HERO SECTION -->
-  <header class="relative min-h-screen flex flex-col items-center justify-center p-6 text-white overflow-hidden">
-    <!-- Animated Gradient Background -->
-    <div class="absolute inset-0 animate-heroGradient mix-blend-overlay opacity-50"></div>
+      /* Album cover hover */
+      .album-art {
+        box-shadow: 0 0 40px rgba(65,105,225,0.5);
+        transition: transform 0.7s ease;
+      }
 
-    <!-- Main Content -->
-    <h1 class="text-5xl sm:text-6xl font-extrabold tracking-tight mb-4">CDVerse</h1>
-    <p class="text-2xl sm:text-3xl font-semibold mb-2 text-yellow-400">Create Your World</p>
-    <p class="text-lg sm:text-xl text-gray-400 text-center max-w-xl">
-      Music. Sports. Lifestyle. — Join the movement.
-    </p>
+      .album-art:hover {
+        transform: scale(1.05);
+      }
 
-    <div class="flex gap-4 mt-8">
-      <a href="#music" class="px-6 py-3 bg-white text-black rounded font-bold hover:bg-gray-200 transition">Listen</a>
-      <a href="#cyw" class="px-6 py-3 border border-white rounded font-bold hover:bg-white hover:text-black transition">Explore CYW</a>
-      <a href="#media" class="px-6 py-3 border border-white rounded font-bold hover:bg-white hover:text-black transition">Watch</a>
-    </div>
-  </header>
+      /* CYW / Lifestyle hover */
+      .section-img {
+        box-shadow: 0 0 30px rgba(65,105,225,0.5);
+        transition: transform 0.7s ease;
+      }
 
-<!-- Latest Release -->
-<section id="music" class="py-16 px-6 text-center">
-  <h2 class="text-3xl sm:text-4xl font-bold mb-6">Latest Release</h2>
-  <img id="album-cover" src="assets/c4y.PNG" alt="Christmas4You Cover Art"/>
-  <p class="text-xl font-semibold mt-4 mb-4">Christmas4You</p>
-  <div class="flex flex-wrap justify-center gap-4 mb-6">
-    <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA" target="_blank">Spotify</a>
-    <a href="https://music.apple.com/gb/artist/cd/1529797820" target="_blank">Apple Music</a>
-    <a href="https://www.youtube.com/@CDVerseWorld" target="_blank">YouTube</a>
-    <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok" target="_blank">SoundCloud</a>
-  </div>
-  <p class="text-gray-300 max-w-xl mx-auto">
-    Listen to "Christmas4You" by CDVerse — music, energy, and the movement you can feel.
-  </p>
-</section>
+      .section-img:hover {
+        transform: scale(1.05);
+      }
 
-  <!-- CYW / MOVEMENT SECTION -->
-  <section id="cyw" class="py-16 px-6">
-    <h2 class="text-3xl font-bold text-center mb-8">Create Your World</h2>
-    <p class="text-center max-w-3xl mx-auto mb-8">
-      CDVerse is more than music — it’s a movement. Explore basketball, sports, and creative projects that define our lifestyle.
-    </p>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <div class="relative group overflow-hidden rounded">
-        <img src="assets/CDVerse_Sports.png" alt="Basketball" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
-        <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
-          <p class="text-white font-bold text-lg">CDVerse Sports</p>
-        </div>
+      /* Social icons */
+      .social-icon {
+        width: 40px;
+        height: 40px;
+        margin: 0 8px;
+        filter: brightness(1);
+        transition: transform 0.3s ease, filter 0.3s ease;
+      }
+
+      .social-icon:hover {
+        transform: scale(1.2);
+        filter: brightness(1.2);
+      }
+    </style>
+  </head>
+  <body class="antialiased">
+
+    <!-- Hero Section -->
+    <header class="min-h-screen flex flex-col items-center justify-center p-6">
+      <h1 id="hero-title">Create Your World</h1>
+      <p id="hero-subtext">Music. Sports. Lifestyle. — Join the movement.</p>
+      <div class="flex gap-3 mt-6">
+        <a href="#music" class="px-6 py-3 bg-white text-black rounded">Listen</a>
+        <a href="#cyw" class="px-6 py-3 border border-white rounded">Explore CYW</a>
+        <a href="#media" class="px-6 py-3 border border-white rounded">Watch</a>
       </div>
-      <div class="relative group overflow-hidden rounded">
-        <img src="cyw2.jpg" alt="Music & Releases" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
-        <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
-          <p class="text-white font-bold text-lg">Music & Releases</p>
-        </div>
+    </header>
+
+    <!-- Music / Album Section -->
+    <section id="music" class="py-16 px-6 text-center">
+      <h2 class="text-3xl font-bold mb-6">Latest Release</h2>
+      <img src="assets/c4y.PNG" alt="Christmas4You Cover Art" class="album-art mx-auto rounded-lg mb-4 w-64 sm:w-72 md:w-80"/>
+      <h3 class="text-xl font-semibold mb-2">Christmas4You</h3>
+      <div class="flex justify-center gap-4 mb-4">
+        <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA">
+          <img src="assets/spotify.svg" alt="Spotify" class="social-icon"/>
+        </a>
+        <a href="https://music.apple.com/gb/artist/cd/1529797820">
+          <img src="assets/applemusic.svg" alt="Apple Music" class="social-icon"/>
+        </a>
+        <a href="https://www.youtube.com/@CDVerseWorld">
+          <img src="assets/youtube.svg" alt="YouTube" class="social-icon"/>
+        </a>
+        <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok">
+          <img src="assets/soundcloud.svg" alt="SoundCloud" class="social-icon"/>
+        </a>
       </div>
-      <div class="relative group overflow-hidden rounded">
-        <img src="assets/CYW.png" alt="Lifestyle" class="w-full h-64 object-cover transform group-hover:scale-105 transition">
-        <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
-          <p class="text-white font-bold text-lg">Lifestyle</p>
-        </div>
+      <p>Listen to "Christmas4You" by CDVerse — music, energy, and the movement you can feel.</p>
+    </section>
+
+    <!-- CYW / Lifestyle Section -->
+    <section id="cyw" class="py-16 px-6 text-center">
+      <h2 class="text-3xl font-bold mb-6">Create Your World</h2>
+      <p class="mb-6">CDVerse is more than music — it’s a movement. Explore basketball, sports, and creative projects that define our lifestyle.</p>
+      <div class="flex flex-wrap justify-center gap-8">
+        <img src="assets/CYW.png" alt="Basketball" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
+        <img src="assets/cyw.1.jpg" alt="Music & Releases" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
+        <img src="assets/CYW.png" alt="Lifestyle" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- CONTACT / BOOKINGS SECTION -->
-  <section id="contact" class="py-16 px-6 bg-[#111]">
-    <h2 class="text-3xl font-bold text-center mb-8">Contact / Bookings</h2>
-    <form name="contact" method="POST" data-netlify="true" class="max-w-md mx-auto flex flex-col gap-4">
-      <label class="flex flex-col">
-        Name
-        <input type="text" name="name" class="p-3 rounded border border-gray-600 bg-black text-white focus:outline-none focus:border-white">
-      </label>
-      <label class="flex flex-col">
-        Email
-        <input type="email" name="email" class="p-3 rounded border border-gray-600 bg-black text-white focus:outline-none focus:border-white">
-      </label>
-      <label class="flex flex-col">
-        Message
-        <textarea name="message" class="p-3 rounded border border-gray-600 bg-black text-white focus:outline-none focus:border-white"></textarea>
-      </label>
-      <button type="submit" class="px-6 py-3 bg-white text-black rounded hover:bg-gray-200 transition">Send</button>
-    </form>
-  </section>
+    <!-- Contact / Bookings -->
+    <section id="contact" class="py-16 px-6 text-center">
+      <h2 class="text-3xl font-bold mb-6">Contact / Bookings</h2>
+      <form class="flex flex-col items-center gap-4 max-w-xl mx-auto">
+        <input type="text" placeholder="Name" class="w-full p-3 rounded bg-gray-900 border border-gray-700"/>
+        <input type="email" placeholder="Email" class="w-full p-3 rounded bg-gray-900 border border-gray-700"/>
+        <textarea placeholder="Message" class="w-full p-3 rounded bg-gray-900 border border-gray-700"></textarea>
+        <button class="px-6 py-3 bg-white text-black rounded hover:bg-gray-200">Send</button>
+      </form>
+    </section>
 
-<!-- Footer Socials -->
-<footer class="text-center text-gray-400 py-6">
-  <div class="flex">
-    <a href="https://www.instagram.com/cdverseworld"><img src="assets/instagram.svg" alt="Instagram" class="social-icon"/></a>
-    <a href="https://www.youtube.com/@CDVerseWorld"><img src="assets/youtube.svg" alt="YouTube" class="social-icon"/></a>
-    <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA"><img src="assets/spotify.svg" alt="Spotify" class="social-icon"/></a>
-    <a href="https://www.tiktok.com/@cdverse"><img src="assets/tiktok.svg" alt="TikTok" class="social-icon"/></a>
-    <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok"><img src="assets/soundcloud.svg" alt="SoundCloud" class="social-icon"/></a>
-    <a href="https://www.instagram.com/camerondankwa"><img src="assets/instagram.svg" alt="Personal Instagram" class="social-icon"/></a>
-  </div>
-  <p class="mt-4">© 2026 CDVerse</p>
-</footer>
+    <!-- Social / Footer -->
+    <footer class="py-6 text-center">
+      <div class="flex justify-center gap-4 mb-4">
+        <a href="https://www.instagram.com/cdverseworld"><img src="assets/instagram.svg" alt="Instagram" class="social-icon"/></a>
+        <a href="https://www.youtube.com/@CDVerseWorld"><img src="assets/youtube.svg" alt="YouTube" class="social-icon"/></a>
+        <a href="https://open.spotify.com/artist/5DWvafXQFBWjVcG9mfQ22t?si=UHXZT4sOSn2NtC88-i4QpA"><img src="assets/spotify.svg" alt="Spotify" class="social-icon"/></a>
+        <a href="https://www.tiktok.com/@cdverse"><img src="assets/tiktok.svg" alt="TikTok" class="social-icon"/></a>
+        <a href="https://on.soundcloud.com/PXKP5WFCpqH5kJcWok"><img src="assets/soundcloud.svg" alt="SoundCloud" class="social-icon"/></a>
+        <a href="https://www.instagram.com/camerondankwa"><img src="assets/instagram.svg" alt="Personal Instagram" class="social-icon"/></a>
+      </div>
+      <p>© 2026 CDVerse</p>
+    </footer>
 
-</body>
-</html>
+  </body>
+  </html>
+      </div>
