--- a/index.html
+++ b/index.html
@@ -74,6 +74,42 @@
         transform: scale(1.05);
       }
 
+      /* Section card with hover label */
+      .section-card {
+        position: relative;
+        overflow: hidden;
+        border-radius: 0.5rem;
+        background: transparent;
+      }
+
+      .section-card img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background: transparent;
+      }
+
+      .section-label {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 0.75rem 0;
+        text-align: center;
+        color: white;
+        font-weight: 700;
+        background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%);
+        transform: translateY(8px);
+        opacity: 0;
+        transition: opacity 220ms ease, transform 220ms ease;
+      }
+
+      .section-card:hover .section-label {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
       /* Social icons */
       .social-icon {
         width: 40px;
@@ -129,9 +165,20 @@
       <h2 class="text-3xl font-bold mb-6">Create Your World</h2>
       <p class="mb-6">CDVerse is more than music — it’s a movement. Explore basketball, sports, and creative projects that define our lifestyle.</p>
       <div class="flex flex-wrap justify-center gap-8">
-        <img src="assets/CYW.png" alt="Basketball" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
-        <img src="assets/cyw.1.jpg" alt="Music & Releases" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
-        <img src="assets/CYW.png" alt="Lifestyle" class="section-img w-48 sm:w-56 md:w-64 rounded-lg"/>
+          <div class="section-card w-48 sm:w-56 md:w-64">
+            <img src="assets/CDVerse_Sports.png" alt="Basketball" class="section-img" />
+            <div class="section-label">Basketball</div>
+          </div>
+
+          <div class="section-card w-48 sm:w-56 md:w-64">
+            <img src="assets/cyw.1.jpg" alt="Music & Releases" class="section-img" />
+            <div class="section-label">Music & Releases</div>
+          </div>
+
+          <div class="section-card w-48 sm:w-56 md:w-64">
+            <img src="assets/CYW.png" alt="Lifestyle" class="section-img" />
+            <div class="section-label">Lifestyle</div>
+          </div>
       </div>
     </section>
 
